# packages/server/server/api/destinations/destination.controller.ts
@@ -1,10 +1,11 @@
 import Controller from '../../common/controller';
 import { NextFunction, Request, Response, Router } from 'express';
-import Destination, { Rating } from '../../../../shared/models/destination';
+import Destination, { Rating, UserRating } from '../../../../shared/models/destination';
 import { DestWithStatus } from '../../../../shared/models/trecipe';
 import { CreateNewDestinationDTO } from '../../../../shared/models/createNewDestinationDTO';
 import DestinationService from './destination.service';
 import { uuid } from 'uuidv4';
+import logger from '../../common/logger';
 
 class DestinationController implements Controller {
     public readonly path = '/destinations';
@@ -16,6 +17,7 @@ class DestinationController implements Controller {
 
     private initializeRoutes() {
         this.router.post(this.path, this.createDestination.bind(this));
+        this.router.post(`${this.path}/rate/:id`, this.updateDestinationUserRating.bind(this));
         this.router.get(this.path, this.getDestinationsByTrecipeId.bind(this));
         this.router.get(`${this.path}/:id`, this.getDestinationById.bind(this));
     }
@@ -24,7 +26,7 @@ class DestinationController implements Controller {
         const dest: CreateNewDestinationDTO = req.body;
         const newDest: Destination = {
             uuid: uuid(),
-            userRatings: [] as Rating[],
+            userRatings: [] as UserRating[],
             photoRefs: [],
             name: dest.name,
             description: '',
@@ -56,6 +58,26 @@ class DestinationController implements Controller {
         DestinationService.getDestinationById(req.params.id)
             .then((dest: Destination) => {
                 res.status(200).json(dest);
+            })
+            .catch((err) => next(err));
+    }
+
+    private updateDestinationUserRating(req: Request, res: Response, next: NextFunction) {
+        DestinationService.getDestinationById(req.params.id)
+            .then((dest: Destination) => {
+                const newRatingArray = dest.userRatings.filter(
+                    (rating) => rating.userId != req.body.userId
+                );
+                dest.userRatings = newRatingArray.concat({
+                    userId: req.body.userId,
+                    rating: req.body.rating,
+                });
+                logger.info(dest);
+                DestinationService.updateDestinationById(req.params.id, dest).then(
+                    (dest: Destination) => {
+                        res.status(200).json(dest);
+                    }
+                );
             })
             .catch((err) => next(err));
     }
